--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,11 +6,16 @@ services:
     ports:
       - "80:8081"
     restart: unless-stopped
+    env_file:
+      - .env
     healthcheck:
-      test: [ "CMD", "/server", "-ping" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8081/health" ]
       interval: 30s
       timeout: 3s
       start_period: 5s
+    volumes:
+      - ./.env:/app/.env
+      - ./logs:/app/logs
 
   mongo:
     image: mongo:8
