--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,10 @@
 # Server configuration
-PORT=3000
+PORT=8081
+DEBUG=false
+LOG_JSON_FORMAT=false
 
-# MongoDB configuration
-MONGODB_URI=mongodb://admin:password123@localhost:27017/chat_db?authSource=admin
+# MongoDB configuration mongodb://localhost:27017
+MONGO_URI=mongodb://mongodb:27017
 DATABASE_NAME=chat_db
 
 # JWT configuration
