--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,9 @@
 # Server configuration
-PORT=8081
+LISTEN_PORT=8081
 DEBUG=false
 LOG_JSON_FORMAT=false
 
-# MongoDB configuration mongodb://localhost:27017
+# MongoDB configuration
 MONGO_URI=mongodb://mongodb:27017
 DATABASE_NAME=chat_db
 
